# dylanlangston.com

./: .dockerignore  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  LICENSE  Makefile  README.md  build-assets.zig  build-viewlocator.zig  build.zig  build.zig.zon  compose-dev.yaml  docker-compose.yaml  raylib_config.zig  samconfig.toml  setup-build.sh  template.yaml  watch.sh
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/: DockerCache.yml  js_common.mjs
.github/actions/DockerCache/: DockerCache.sh  action.yml
.github/actions/PopulateBuildSummary/: action.yml  main.js  main.mjs  post.mjs  summary.mjs  validations.mjs
.github/actions/SAMDeploy/: action.yml
.github/actions/TriggerWorkflow/: action.yml  main.mjs
.github/actions/VersionString/: VersionString.js  action.yml  main.js  main.mjs
.github/actions/WithPostStep/: action.yml  main.js
.github/steps/: Build.yml  Test.yml
.github/workflows/: Build.yml  BuildAndDeploy.yml  DependabotAutoMerge.yml  Deploy.yml  OnMerge.yml  OnPush.yml  PublishProduction.yml  Release.yml  Test.yml  TestAndBuild.yml
contact-lambda/: Cargo.toml
contact-lambda/src/: main.rs
email-forward-lambda/: Cargo.toml
email-forward-lambda/src/: main.rs
python-lambda/: .gitignore  pyproject.toml
python-lambda/src/: chat.py  dependencies.txt  requirements.txt
rust-lambda/: Cargo.toml  TestData.json
rust-lambda/src/: contact.rs  email-forward.rs
site/: .gitignore  FetchJSONResume.ts  OptimizeWASMPlugin.ts  UpdateResume.ts  bun.lockb  emscripten_post.js  emscripten_pre.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
site/src/: app.css  app.d.ts  app.html  app.postcss  hooks.server.ts  hooks.ts
site/src/components/: chatbot.svelte  context-menu.svelte  cookie-prompt.svelte  cookie-settings.svelte  emscripten.svelte  footer.svelte  header.svelte  loader.svelte  modal.svelte  mouse-cursor.svelte  panel.svelte  ripple.svelte  status-container.svelte  typewriter.svelte
site/src/lib/: AudioContextProxy.ts  Common.ts  CookieSettingsManager.ts  Emscripten.ts  Emscripten.worker.ts  FakeDOM.ts  Favicon.ts  FunctionProxy.ts  IPCMessage.ts  IPCProxy.ts  WorkerDOM.ts
site/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
site/src/styles/: background-overlay.css
site/src/types/: emscripten.d.ts  miniaudio.d.ts
site/static/: dylanlangston.com.js.symbols  fixes.js  site.webmanifest
site/tests/: background-mask.css  test.ts
zig-src/: main.zig
zig/src/: Allocator.zig  AssetLoader.zig  AssetManager.zig  Common.zig  Generics.zig  Inputs.zig  Logger.zig  MiscellaneousHelpers.zig  ViewLocator.zig  main.zig
(+15 files in other folders)
