[package]
name = "contact-lambda"
version = "0.1.0"
edition = "2021"
authors = ["dylanlangston"]

[dependencies]
lambda_http = "0.10.0"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.10"
rusoto_core = "0.48.0"
rusoto_ses = "0.48.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }

[package.metadata.lambda.env]
ToEmail = "test@test.com"
FromEmail = "test@test.com"