[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"
authors = ["dylanlangston"]

[dependencies]
lambda_http = "0.15.1"
lambda_runtime = "0.14.4"
log = "0.4.26"
env_logger = "0.11.6"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
aws-config = "1.5.18"
aws-sdk-sesv2 = "1.69.0"
aws-sdk-s3 = "1.65.0"
email = "0.0.21"

[package.metadata.lambda.env]
ToEmail = "test@test.com"
FromEmail = "test@test.com"

[package.metadata.lambda.bin.contact.env]

[package.metadata.lambda.bin.email-forward.env]

[[bin]]
name = "contact"
path = "src/contact.rs"

[[bin]]
name = "email-forward"
path = "src/email-forward.rs"
